[FIX] web: pager button and scrollbar conflict
In Firefox grouped list views, a visible scrollbar overlaps the group
header's right pager button. This makes it difficult for users to click
'next'.

This commit fixes this by increasing the width of the pager buttons and
column, and adjusting the padding accordingly.
Those changes also require to adapt the columnWidthHook since the Count
column is not taken into account otherwise.

Introduced by PR #255332

--- a/addons/web/static/src/views/list/list_renderer.scss
+++ b/addons/web/static/src/views/list/list_renderer.scss
@@ -74,6 +74,7 @@
 
             > tr > :last-child {
                 padding-right: var(--ListRenderer-table-padding-x);
+                padding-left: var(--ListRenderer-table-padding-x);
             }
         }
 
@@ -324,7 +325,7 @@
                     .o_pager_previous,
                     .o_pager_next {
                         padding: 0 !important;
-                        width: 16px !important;
+                        width: 18px !important;
                         height: 24px !important;
 
                         display: flex !important;
@@ -402,8 +403,8 @@
         }
 
         .o_list_actions_header {
-            width: 36px !important;
-            min-width: 36px;
+            width: 52px !important;
+            min-width: 52px;
             background-color: var(--ListRenderer-thead-bg-color);
         }
 
